--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && echo 'Build Complete. Contents of dist:' && ls -la dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
